--- a/src/XamarinMvvmReference.Android/Resources/layout/ListItem_Person.axml
+++ b/src/XamarinMvvmReference.Android/Resources/layout/ListItem_Person.axml
@@ -4,9 +4,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-  <TextView
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          local:MvxBind="Text Title; Click ShowCommand" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Person's Name"
+        local:MvxBind="Text Title; Click ShowCommand"
+        android:padding="15dp"
+        android:textSize="20dp" />
 </LinearLayout>
-
